crates/top/dl_sdk/tests/lenses/snapshots/lenses__lenses__operations__scatter_columns_static.snap
---
source: crates/top/dl_sdk/tests/lenses/operations.rs
expression: "format!(\"{chunk:-240}\")"
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                  │
│ * entity_path: /scatter_test/exploded                                                                      │
│ * id: [**REDACTED**]                                                                                       │
│ * version: [**REDACTED**]                                                                                  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────┬─────────────────────────────┐ │
│ │ RowId                                         ┆ my_timestamp             ┆ exploded_strings            │ │
│ │ ---                                           ┆ ---                      ┆ ---                         │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Int64              ┆ type: List(Utf8)            │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: my_timestamp ┆ component: exploded_strings │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true          ┆ kind: data                  │ │
│ │ is_sorted: true                               ┆ kind: index              ┆                             │ │
│ │ kind: control                                 ┆                          ┆                             │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════╪═════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 1                        ┆ [one]                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 2                        ┆ [two]                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 3                        ┆ [three]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 4                        ┆ [four]                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 5                        ┆ null                        │ │
│ └───────────────────────────────────────────────┴──────────────────────────┴─────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
